Fix another issue with the address bar on mobile.

--- a/test/style.css
+++ b/test/style.css
@@ -484,9 +484,8 @@ footer {
         position: fixed;
         top: 5.625rem;
         right: -100%;
+        bottom: 0;
         width: 100%;
-        height: calc(100dvh - 5.625rem);
-        z-index: 9888;
         display: flex;
         flex-direction: column;
         gap: 0.5rem;
